--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 	<head>
-		<title>Secret Agent Supply</title>
+		<title>Secret Agent Supply Inc.</title>
+		<link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
 		<link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
 
