--- a/index.html
+++ b/index.html
@@ -3,24 +3,67 @@
 
 	<head>
 		<title>Secret Agent Supply Inc.</title>
+
+  		<meta charset="utf-8">
+ 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
 		<link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
-		<div class="container">
+
 			<header>
-				<img src="./resources/images/logo.png">
-				<span>SECRET AGENT SUPPLY INC.</span>
-
+				<div class="container-size">
+					<img src="./resources/images/logo.png">
+					<span>SECRET AGENT SUPPLY INC.</span>
+				</div>
 			</header>
+			<div class="container-size">
+				<div class="FrontPage">
+					<h4>NEW ARRIVAL</h4>
+					<h1>SPORT BIKES AND</h1>
+					<h1>MOTORCYCLES</h1>
+				</div>
+			</div>
+			<div class="menu">
+				<span>Eyewear</span>
+				<span>Apparel</span>
+				<span>Gadgets</span>
+				<span>Vehicles</span>
+				<span>Classes</span>
+				<span>Contact</span>
+			</div>
 
+			<div class="MiddlePage">
+				<div class="saleItems">
+					<div class="agentPhoto">
+						<img src="./resources/images/pen.png">
+						<p>Exploding Pen</p>
+					</div>
+					<div class="agentPhoto">
+						<img src="./resources/images/watch.png">
+						<p>Cellular Watch</p>
+					</div>
+					<div class="agentPhoto">
+						<img src="./resources/images/glasses.png">
+						<p>Thermal Glasses</p>
+					</div>
+				</div>
+				<div class="LocationHours">
+					<div class="location">
+						<p>Location</p>
+						<p>-47.346426, 84.32354</p>
+					</div>
+					<div class="hours">
+						<p>Hours</p>
+						<p>0800-1800</p>
+					</div>
+				</div>
 
-
-
-
-
-
+			</div>
+			<footer>
+			<p>Copyright Secret Agent Supply Inc.</p>
+			</footer>
 
 		</div>
 	</body>
