Those damn glasses

--- a/index.html
+++ b/index.html
@@ -18,23 +18,31 @@
 					<span>SECRET AGENT SUPPLY INC.</span>
 				</div>
 			</header>
-			<div class="container-size">
+
 				<div class="FrontPage">
-					<h4>NEW ARRIVAL</h4>
-					<h1>SPORT BIKES AND</h1>
-					<h1>MOTORCYCLES</h1>
+
+					<div class="container-size">
+						<div class="banner">
+							<h4>NEW ARRIVAL</h4>
+							<h1>SPORT BIKES AND</h1>
+							<h1>MOTORCYCLES</h1>
+							</div>
+						</div>
+				</div>
+			<div class="menu">
+				<div class="container-size">
+					<div class="menuItems">
+						<span>Eyewear</span>
+						<span>Apparel</span>
+						<span>Gadgets</span>
+						<span>Vehicles</span>
+						<span>Classes</span>
+						<span>Contact</span>
+					</div>
 				</div>
 			</div>
-			<div class="menu">
-				<span>Eyewear</span>
-				<span>Apparel</span>
-				<span>Gadgets</span>
-				<span>Vehicles</span>
-				<span>Classes</span>
-				<span>Contact</span>
-			</div>
-
 			<div class="MiddlePage">
+			<div class="container-size">
 				<div class="saleItems">
 					<div class="agentPhoto">
 						<img src="./resources/images/pen.png">
@@ -44,10 +52,11 @@
 						<img src="./resources/images/watch.png">
 						<p>Cellular Watch</p>
 					</div>
-					<div class="agentPhoto">
+					<div class="agentPhotoGlasses">
 						<img src="./resources/images/glasses.png">
 						<p>Thermal Glasses</p>
 					</div>
+				</div>
 				</div>
 				<div class="LocationHours">
 					<div class="location">
