Finished original product

--- a/index.html
+++ b/index.html
@@ -60,17 +60,27 @@
 											</div>
 											<div class="container-size">
 												<div class="LocationHours">
-													<div class="location">
-														<p>Location</p>
-														<p>-47.346426, 84.32354</p>
+													<div class="LastNotes">
+														<div class="TextLocation">
+															<p>Location</p>
+														</div>
+														<div class="TextInfo">
+															<p>47-346436, 84.32354</p>
 													</div>
-													<div class="hours">
-														<p>Hours</p>
-														<p>0800-1800</p>
+													</div>
+
+													<div class="LastNotes">
+														<div class="TextHours">
+															<p>Hours</p>
+														</div>
+														<div class="TextInfo">
+															<p>0800 - 1800</p>
+														</div>
 													</div>
 												</div>
 											</div>
-										</div>
+
+
 										<footer>
 											<p>Copyright Secret Agent Supply Inc.</p>
 										</footer>
