--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 									</div>
 								</div>
 							</div>
+
 							<div class="menu">
 								<div class="container-size">
 									<div class="menuItems">
@@ -32,6 +33,9 @@
 										<span>Vehicles</span>
 										<span>Classes</span>
 										<span>Contact</span>
+									</div>
+									<div class="mobileMenu">
+										<span>Menu</span>
 									</div>
 								</div>
 							</div>
